Fix text alignment or red button

--- a/css/styles.css
+++ b/css/styles.css
@@ -1753,6 +1753,7 @@ content: "\f106";
 
 	.header .btn-solid-lg {
 		margin-bottom: 0;
+		text-align: center;
 	}
 	
 	.header .btn-solid-lg,
